unpackaged/main/default/objects/Project_Extras__c/Project_Extras__c.object-meta.xml
<CustomObject>
    <description>Extra deliverables provided as part of the project which were not in-scope.</description>
    <label>Project Extras</label>
    <nameField>
        <displayFormat>P-Extra-{0000}/{MMYY}</displayFormat>
        <label>Project Extras Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Extras</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>