unpackaged/main/default/objects/Project_Extras__c/fields/Customer_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback__c</fullName>
    <description>Customer feedback on the extra deliverable.</description>
    <inlineHelpText>Customer feedback on the extra deliverable.</inlineHelpText>
    <label>Customer Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>