unpackaged/main/default/objects/Project_Extras__c/fields/Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Deliverable__c</fullName>
    <description>The extra deliverable provided</description>
    <inlineHelpText>The extra deliverable provided</inlineHelpText>
    <label>Deliverable</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>