unpackaged/main/default/objects/Project_Extras__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the extra deliverable provided.</description>
    <inlineHelpText>Description of the extra deliverable provided.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>