unpackaged/main/default/objects/Project_Extras__c/fields/Effort__c.field-meta.xml
<CustomField>
    <fullName>Effort__c</fullName>
    <description>Effort taken to deliver the extra deliverable.</description>
    <inlineHelpText>Effort taken to deliver the extra deliverable:
Low: &lt; 1 day
Medium: 1-3 days
High: &gt; 4 days</inlineHelpText>
    <label>Effort</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>