unpackaged/main/default/objects/Project_Extras__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Project the extra deliverable is related to.</description>
    <inlineHelpText>Project the extra deliverable is related to.</inlineHelpText>
    <label>Project</label>
    <referenceTo>inspire1__Project__c</referenceTo>
    <relationshipLabel>Project Extras</relationshipLabel>
    <relationshipName>Project_Extras</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>